Fix for wrapping when there are multiple answers.

--- a/Views/Browse/Question/Question.css
+++ b/Views/Browse/Question/Question.css
@@ -119,6 +119,7 @@ input.ask-textbox {
 
 #qa-answers article {
 	margin: 15px 0;
+	clear: left;
 }
 .qa-lawyer-profile {
 	float: left;
